Updates for client certs
