# src/UIAPIServer/api.yaml
@@ -204,7 +204,30 @@ paths:
               schema:
                 $ref: "#/components/schemas/ServerCert"
       x-swagger-router-controller: DfspServerCerts
-
+  /environments/{envId}/dfsp/clientcerts:
+    parameters:
+      - name: envId
+        in: path
+        description: ID of environment
+        required: true
+        schema:
+          type: string
+    post:
+      tags:
+        - DFSP-client-certificates-configuration
+      summary: post client certificates
+      description: TBD
+      operationId: createDfspClientCerts
+      requestBody:
+        $ref: "#/components/schemas/BaseClientCSR"
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ServerCert"
+      x-swagger-router-controller: DfspServerCerts
 components:
   schemas:
     Batch:
@@ -343,6 +366,8 @@ components:
       type: object
       properties:
         id:
+          type: string
+        name:
           type: string
         batchId:
           type: integer
@@ -594,6 +619,12 @@ components:
         without a minor currency unit. It also only allows four digits in the
         minor currency unit; a negative value is not allowed. Using more than 18
         digits in the major currency unit is not allowed.
+    BaseClientCSR:
+      type: "object"
+      properties:
+        clientCSR:
+          type: "string"
+          description: "PEM encoded CSR"
     BaseServerCert:
       type: object
       description: The server certificate.
